20250512-1
完成EMP系統基礎邏輯